<resources>
    <string name="app_name">Medicare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="API_KEY">AIzaSyAExCsBR4P4ov3Zgh5L0AU5vWbwNq3c48E</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_maps">Map</string>
    <string name="start_button">Xem phòng khám gần nhất</string>
    <string name="zoom_button">Tìm thêm</string>
    <string name="empty_textview">Text view</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign up</string>
    <string name="title_activity_signup">Create account</string>
    <string name="edittext_id_hint">Username</string>
    <string name="edittext_name_hint">Full name</string>
    <string name="edittext_password_hint">Password</string>
    <string name="edittext_email_hint">Email</string>
    <string name="edittext_phone_hint">Phone number</string>
    <string name="button_create_acc">Create account</string>
    <string name="intro_map_title">Search</string>
    <string name="intro_schedule_title">Schedule</string>
    <string name="intro_manage_title">Manage</string>
    <string name="intro_map_description_normal">Search position of </string>
    <string name="intro_map_description_highlight">closest doctors in your local </string>
    <string name="intro_schedule_description_normal">Make an appointment</string>
    <string name="intro_schedule_description_highlight">in fast and convenient way</string>
    <string name="intro_manage_description_normal">Manage your appointments  </string>
    <string name="intro_manage_description_highlight">in easy and intuitive way</string>
    <string name="id_hint">Only letters and digits(min 6 chars)</string>
    <string name="password_hint">Must letters and digits(min 6 chars)</string>
    <string name="phone_hint">Optional</string>
    <string name="name_hint">Your full name</string>
    <string name="email_hint">Your email address</string>
    <string name="forgot_text">Forgot your password ?</string>
    <string name="login_msg_success">Login success</string>
    <string name="login_msg_fail">Login fail</string>
    <string name="loading_msg">Please wait...</string>
    <string name="search">Search</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_activity_main">Search and manage booking</string>
    <string name="hello_blank_fragment">Empty</string>
    <string name="action_example">Sample</string>
    <string-array name="tabs">
        <item>TAB 1</item>
        <item>TAB 2</item>
        <item>TAB 3</item>
        <item>TAB 4</item>
        <item>TAB 5</item>
        <item>TAB 6</item>
    </string-array>
    <string name="tab_list">Doctor List</string>
    <string name="tab_map">Map</string>
    <string name="tab_fav">Favorite</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_search">Search</string>
    <string name="drawer_manage">Manage</string>
    <string name="drawer_setting">Setting</string>
    <string name="drawer_signout">Sign out</string>
    <string name="error_intro">Input error:</string>
    <string name="signup_success">Sign up success !</string>
    <string name="invalid_id">ID must have letters(a_z,A_Z) or digit (0_9), and between 6_20 chars</string>
    <string name="invalid_pass">Password must have letters(a_z,A_Z) and digit (0_9) and between 6_20 chars</string>
    <string name="invalid_email">This email is invalid, please check again.</string>
    <string name="invalid_name">This name is invalid, please check again.</string>
    <string name="empty_id">ID or Password empty, please check again.</string>
    <string name="signup_msg_fail">Sign up fail :</string>
    <string name="btn_more_title">Find more</string>
    <string name="title_activity_profile">Doctor information</string>
    <string name="loading">Loading</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="to"> to </string>
    <string name="edittext_dr_workdays">Workdays</string>
    <string name="edittext_dr_worktime">Worktime</string>
    <string name="edittext_dr_address">Address</string>
    <string name="edittext_dr_phone">Phone</string>
    <string name="edittext_dr_email">Email</string>
    <string name="edittext_dr_license">Licencse</string>
    <string name="title_activity_booking">Create new booking</string>
    <string name="cancel">cancel</string>
    <string name="done">done</string>
    <string name="dr_name_hint">Doctor name</string>
    <string name="date_hint">Booking date</string>
    <string name="time_hint">Booking time</string>
    <string name="booking_success"> Booking success , your booking has been sent to doctor</string>
    <string name="booking_fail">Booking fail:</string>
    <string name="booking_helper">Notice : Email and phone must be available for contact</string>
    <string name="dateSliderTitle">Selected date</string>
    <string name="set">Set</string>
    <string name="time_selected">Selected time</string>
    <string name="test_account_id">phongnguyen93</string>
    <string name="test_account_pass">9232780aa</string>
    <string name="day_name_format">EEE</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">MMMM yyyy</string>
    <string name="calendar_hint">Select booking date</string>
    <string name="action_today">Today</string>
    <string name="action_dayview">Day view</string>
    <string name="action_weekview">Week view</string>
    <string name="spinner_title">View type</string>
    <string name="tab_list_title">Find in list</string>
    <string name="tab_map_title">Find in map</string>
    <string name="tab_fav_title">Favoured doctors</string>
    <string name="menu_list_filter">Filter</string>
    <string name="menu_map_filter">Filter</string>
    <string name="menu_schedule_filter">Filter</string>
    <string name="menu_schedule_setting">Setting</string>
    <string name="search_hint">Find with doctor name</string>
    <string name="empty_text">No data to display</string>
    <string name="empty_button">Try again</string>
    <string name="disconnect_noti">No internet connection !</string>
    <string name="slow_connect_noti">Slow connection !</string>
    <string name="success_connect_noti">Connected !</string>
    <string name="content_authority">com.phongnguyen93.medicare</string>
    <string name="fav_text">Add to favour</string>
    <string name="unfav_text">Remove from favour</string>
    <string name="fav_noti">Added to favour</string>
    <string name="unfav_noti">Removed from favour</string>
    <string name="popupmenu_detail">Detail info</string>
    <string name="popupmenu_quick_booking">Quick booking</string>
    <string name="popupmenu_unfav">Unfav</string>
    <string name="unfav_undo">Undo</string>
    <string name="gcm_defaultSenderId">694600385114</string>
    <string name="confirm_noti_doctor">Doctor : </string>
    <string name="confirm_noti_date">Date  : </string>
    <string name="confirm_noti_time">Time  : </string>
    <string name="confirm_noti_address">Address : </string>
    <string name="confirm_noti_title">Booking confirmed</string>
    <string name="confirm_noti_message">Your booking has been confirmed</string>
    <string name="title_activity_booking_detail">Booking detail</string>
    <string name="status_unchecked_text">Not checked</string>
    <string name="status_checked_text">Checked</string>
    <string name="checked_event_title">Checked booking</string>
    <string name="unchecked_event_title">Unchecked booking</string>
    <string name="minimize_doctor">Dr</string>
    <string name="pref_confirm_booking_title">Booking confirm notification</string>
    <string name="pref_confirm_booking_summary">Get notification when a booking is checked</string>
    <string name="pref_upcoming_booking_title">Upcoming booking notification</string>
    <string name="pref_upcoming_booking_summary">Get notification whenever a booking is upcoming</string>
    <string name="pref_confirm_email_title">Confirm booking with email</string>
    <string name="pref_confirm_email_summary">Get confirm email whenever a booking is checked</string>
    <string name="prefs_web_page">More info</string>
    <!--  Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settting">Setting</string>
    <string name="signout_fail">Please try again later</string>
    <string name="drawer_info">More info</string>
    <string name="group_noti_title">Today you have</string>
    <string name="alarm_noti_title">Upcoming booking</string>
    <string name="alarm_noti_message">Today you have a booking at</string>
</resources>
