<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:textColor="@color/primary_text"
        android:title="@string/pref_confirm_booking_title"
        android:summaryOn="@string/pref_confirm_booking_summary"
        android:defaultValue="true"
        android:key="pref_confirm_booking_noti">
    </SwitchPreference>

    <SwitchPreference
        android:textColor="@color/primary_text"
        android:title="@string/pref_upcoming_booking_title"
        android:summaryOn="@string/pref_upcoming_booking_summary"
        android:defaultValue="true"
        android:key="pref_upcoming_booking_noti">
    </SwitchPreference>

    <CheckBoxPreference
        android:textColor="@color/primary_text"
        android:title="@string/pref_confirm_email_title"
        android:defaultValue="true"
        android:key="pref_confirm_email">
    </CheckBoxPreference>

</PreferenceScreen>