<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/drawer_search" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/drawer_manage" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/drawer_profile" />
        <item
            android:id="@+id/nav_fourth_fragment"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/drawer_info" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/drawer_signout" />
    </group>
</menu>