<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_color"
    tools:context="com.namlongsolutions.medicare.activities.BookingActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/title_activity_booking"
        android:textColor="@color/primary"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/scroll_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:isScrollContainer="true">

        <LinearLayout
            android:id="@+id/edittext_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/base_panel_bottom_divider"
            android:orientation="vertical"
            android:padding="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_dr_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:digits="0,1,2,3,4,5,6,7,8,9,qwertzuiopasdfghjklyxcvbnm"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/dr_name_hint"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/ic_account_box_black_24dp"
                app:met_primaryColor="@color/primary" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:editable="false"
                android:hint="@string/date_hint"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/ic_today_black_24dp"
                app:met_primaryColor="@color/primary" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:editable="false"
                android:hint="@string/time_hint"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_helperTextColor="@color/divider"
                app:met_iconLeft="@drawable/ic_alarm_black_24dp"
                app:met_primaryColor="@color/primary" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:hint="@string/edittext_email_hint"
                android:inputType="textEmailAddress"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/_ic_email_black_24dp"
                app:met_primaryColor="@color/primary"

                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:hint="@string/edittext_phone_hint"
                android:inputType="phone"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/_ic_phone_black_24dp"
                app:met_primaryColor="@color/primary" />

            <TextView
                android:id="@+id/txt_helper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/booking_helper"
                android:textColor="@color/secondary_text"
                android:textSize="13sp" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        />
</RelativeLayout>
